2017-07-25  Richard Biener  <rguenther@suse.de>

PR middle-end/81546
	* tree-ssa-operands.c (verify_imm_links): Remove cap on number
	of immediate uses, be more verbose on errors.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@250505 138bc75d-0d04-0410-961f-82ee72b054a4